# CTU-Timetable-maker

./: .gitignore  Dockerfile  README.md  dockerfile  kos_api.py  main.py  pyproject.toml  requirements.txt
static/: style.css
templates/: home.html  layout.html  login.html  timetable.html
