[tool.poetry]
name = "ctu-timetable-maker"
version = "0.1.0"
description = "Timetable maker for CTU"
authors = ["Bertik23 <bertik23@bertik23.tech>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.23.0"
matplotlib = "^3.10.0"
flask = "^3.1.0"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
